--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,13 +11,13 @@ phases:
       - docker --version
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - docker build -t catnip:latest .
-      - docker tag catnip:latest 785517377502.dkr.ecr.us-east-2.amazonaws.com/catnip:latest    
+      - docker build -t hello-repository2:latest .
+      - docker tag catnip:latest 580338969199.dkr.ecr.ap-south-1.amazonaws.com/hello-repository2    
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 785517377502.dkr.ecr.us-east-2.amazonaws.com/catnip:latest
+      - docker push 580338969199.dkr.ecr.ap-south-1.amazonaws.com/hello-repository2
 artifacts:
   files:
     - '**/*'
